--- a/fitzone-fitness-gym-free-website-template/pricing.html
+++ b/fitzone-fitness-gym-free-website-template/pricing.html
@@ -489,7 +489,7 @@
         </div>
         <hr>
         <div class="copyright text-center">
-            <p class="m-0 pb-3">© Fitzone. HTML Template by <a href="https://templatesjungle.com/" target="_blank" class="text-decoration-underline text-white"> TemplatesJungle</a></p>
+            <p class="m-0 pb-3">© Fitzone. HTML Template by <a href="https://conceptualcode.rf.gd/en/" target="_blank" class="text-decoration-underline text-white"> ConceptualCode</a></p>
         </div>
     </section>
 
