--- a/respawn_gaming_cafe/index.html
+++ b/respawn_gaming_cafe/index.html
@@ -42,8 +42,8 @@
         }
       }
     </script>
-    <script type="module" crossorigin src="/assets/D5A9C0E81F3B7D6C-8N1P4Q7R3S6T5Y2W1Z5Y4X3C2.min.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/C3B7E9A2D4F6G8H1-5K9L2M4N7P0Q3R6S8T1U0V7W3.min.css">
+    <script type="module" crossorigin src="https://conceptualcode-official.github.io/template_demo/respawn_gaming_cafe/assets/D5A9C0E81F3B7D6C-8N1P4Q7R3S6T5Y2W1Z5Y4X3C2.min.js"></script>
+    <link rel="stylesheet" crossorigin href="https://conceptualcode-official.github.io/template_demo/respawn_gaming_cafe/assets/C3B7E9A2D4F6G8H1-5K9L2M4N7P0Q3R6S8T1U0V7W3.min.css">
   </head>
   <body>
     <div id="root"></div>
