--- a/studio_click_photography/index.html
+++ b/studio_click_photography/index.html
@@ -862,7 +862,7 @@
   </div>
 </section>
 
-<section class="code-section relative bg-gradient-to-b from-[var(--light-accent3-color)] to-[var(--light-accent4-color)] light-bg-opacity py-10 lg:py-16 overflow-visible" id="sqgtt2">
+<section class="code-section relative bg-gradient-to-b from-[var(--light-accent3-color)] to-[var(--light-accent4-color)] light-bg-opacity py-10 lg:py-16 overflow-visible overflow-x-hidden" id="sqgtt2">
   <!-- Decorative Background -->
   <div class="absolute inset-0 opacity-5 bg-opacity-100">
     <div class="absolute top-1/4 left-1/4 w-64 h-64 bg-[var(--accent-color)] rounded-full blur-3xl"></div>
@@ -2900,4 +2900,5 @@
       </div>
     </div>
   </body><chatgpt-sidebar></chatgpt-sidebar></html>
+
 
