--- a/gangasagar_food_corner/index.html
+++ b/gangasagar_food_corner/index.html
@@ -17,7 +17,7 @@
 <meta name="twitter:description" content="Experience premium website design excellence with Gangasagar Food Corner. Modern UI and optimized performance with advanced technologies deployed thoughtfully.">
 <script type="module" data-landingsite-js="2165cefb-06c1-4a19-827a-8a71ce4fa8f8">
 
-    import { init } from '/assets/js/serverJavaScript.js';
+    import { init } from '../../assets/js/serverJavaScript.js';
     if (typeof init === 'function') {
         init();
     } else {
@@ -2037,3 +2037,4 @@
       </div>
     <div class="frame-content"></div></div>
   </body></html>
+
