--- a/respawn_gaming_cafe/index.html
+++ b/respawn_gaming_cafe/index.html
@@ -48,4 +48,32 @@
   <body>
     <div id="root"></div>
   </body>
+  <script>document.addEventListener('DOMContentLoaded',()=>{
+if (window.location.href.includes('dist1')) {
+    const handleClickIfFound = function() {
+        const homeLink = document.querySelector('[href="/"]');
+        if (homeLink) {
+            homeLink.click();
+            observer.disconnect();
+            return true;
+        }
+        return false;
+    };
+    const observer = new MutationObserver(function(mutationsList, observer) {
+        for(const mutation of mutationsList) {
+            if (mutation.type === 'childList') {
+                if (handleClickIfFound()) {
+                    break;
+                }
+            }
+        }
+    });
+    observer.observe(document.body, { 
+        childList: true, // नए child nodes के जुड़ने या हटने को देखें
+        subtree: true    // body के अंदर की सभी गहरी nesting को भी देखें
+    });
+    handleClickIfFound();
+} else {
+    console.log("URL में 'dist1' नहीं है, इसलिए Observer शुरू नहीं किया गया।");
+}})</script>
 </html>
