--- a/respawn_gaming_cafe/index.html
+++ b/respawn_gaming_cafe/index.html
@@ -49,7 +49,7 @@
     <div id="root"></div>
   </body>
   <script>document.addEventListener('DOMContentLoaded',()=>{
-if (window.location.href.includes('dist1')) {
+if (window.location.href.includes('respawn_gaming_cafe')) {
     const handleClickIfFound = function() {
         const homeLink = document.querySelector('[href="/"]');
         if (homeLink) {
