--- a/respawn_gaming_cafe/index.html
+++ b/respawn_gaming_cafe/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
     <meta name="description" content="Respawn Gaming Cafe - The ultimate gaming experience with PC, PS5, Racing Simulators, and more. Book your slot now for a premium gaming session." />
-    <meta name="author" content="Dualite Alpha" />
+    <meta name="author" content="conceptualcode" />
 
     <meta property="og:title" content="Respawn Gaming Cafe | Your Ultimate Gaming Destination" />
     <meta property="og:description" content="Experience the next level of gaming in a premium, state-of-the-art environment." />
