--- a/aerova_travel_agency/index.html
+++ b/aerova_travel_agency/index.html
@@ -47,7 +47,7 @@
 
   </body>
 <script>document.addEventListener('DOMContentLoaded',()=>{
-if (window.location.href.includes('respawn_gaming_cafe')) {
+if (window.location.href.includes('aerova_travel_agency')) {
     const handleClickIfFound = function() {
         const homeLink = document.querySelector('[href="/"]');
         if (homeLink) {
@@ -74,3 +74,4 @@ if (window.location.href.includes('respawn_gaming_cafe')) {
 } else {
 }})</script>
 </html>
+
