--- a/aureva_care_clinic/index.html
+++ b/aureva_care_clinic/index.html
@@ -47,7 +47,7 @@
 
   </body>
 <script>document.addEventListener('DOMContentLoaded',()=>{
-if (window.location.href.includes('respawn_gaming_cafe')) {
+if (window.location.href.includes('aureva_care_clinic')) {
     const handleClickIfFound = function() {
         const homeLink = document.querySelector('[href="/"]');
         if (homeLink) {
