--- a/cricket_academy/index.html
+++ b/cricket_academy/index.html
@@ -48,7 +48,7 @@
 
   </body>
 <script>document.addEventListener('DOMContentLoaded',()=>{
-if (window.location.href.includes('respawn_gaming_cafe')) {
+if (window.location.href.includes('cricket_academy')) {
     const handleClickIfFound = function() {
         const homeLink = document.querySelector('[href="/"]');
         if (homeLink) {
