--- a/immortal_gaming_cafe/index.html
+++ b/immortal_gaming_cafe/index.html
@@ -47,7 +47,7 @@
 
   </body>
 <script>document.addEventListener('DOMContentLoaded',()=>{
-if (window.location.href.includes('respawn_gaming_cafe')) {
+if (window.location.href.includes('immortal_gaming_cafe')) {
     const handleClickIfFound = function() {
         const homeLink = document.querySelector('[href="/"]');
         if (homeLink) {
